--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ h1{
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
     color: #75B79E;
-    font-size: 56px;
+    font-size: 90px;
     display: flex;
     justify-content: center;
     margin-top: 40px;
@@ -53,8 +53,26 @@ img{
 
 .virada .praCima {
     transform: rotateY(-180deg);
-  }
+}
 
+.topo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.relogio {
+    background-color: black;
+    font-size:  32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100px;
+    height: 40px;
+    color: pink;
+    margin-left: 2%;
+    margin-top: 2%;
+}
 
 /*  MOBILE  */
 @media (max-width: 767px){
